# Lambdas-020

./: CMakeLists.txt  lambda.cpp
